# libcap

./: .gitignore  .gitlab-ci.yml  CONTRIBUTORS  INSTALL  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
include/: Makefile.am  internal.h  kliblcd.h  libcap.h  libcap_internal.h  libcap_internal_kernel.h  libcap_internal_user.h  libcap_kernel.h  libcap_types.h  libcap_user.h  list.h  types.h
include/compat_internal/: osx_user.h
patches/: use_mutexes.patch
scripts/: cptr_cache_bmap_defs.awk  cptr_cache_bmap_for_level.awk  cptr_cache_bmap_size.awk  cptr_size.awk  ulong_size.awk
src/: Makefile.am  cap.c  cptr_cache.c  grant_cap.c
src/common/: Makefile.am  cap.c  cptr_cache.c  type_system.c
src/include/: Makefile.am  global_cap_types.h  libcap.h  libcap.h.in  libcap_config.h.in  libcap_internal.h  libcap_list.h  libcap_types.h  libcap_types.h.in
src/include/api/: libcap.h  list.h
src/kernel/: Makefile.in
src/platform/: Makefile.am
src/platform/kernel/: Kbuild.in  Makefile.am  top_level.am
src/platform/kernel/include/: Makefile.am  libcap_platform.h  libcap_platform_internal.h  libcap_platform_types.h
src/platform/kernel/module/: Kbuild.in  Makefile.am  main.c
src/platform/kernel/src/: cap_module.c
src/platform/kernel/test/: Makefile.am
src/platform/user/: Makefile.am  top_level.am
src/platform/user/include/: Makefile.am  libcap_platform.h  libcap_platform_internal.h  libcap_platform_types.h
src/platform/user/src/: cap_user.c  cptr_cache_user.c
src/platform/user/test/: Makefile.am  cap-stuff.c  multi_thrd_cap.c
src/test/: Makefile.am
src/user/: Makefile.am  cap_user.c  cptr_cache_user.c
test/: Makefile  Makefile.am  cap-stuff.c  multi_thrd_cap.c
test/user/: Makefile.am  cap-stuff.c  multi_thrd_cap.c
