
# noinst_PROGRAMS = cap-stuff multi_thrd_cap

# AM_CPPFLAGS = \
# 	-I$(top_srcdir)/src/include \
# 	-I$(top_builddir)/src/include \
# 	-I$(top_srcdir)/src/platform/user/include \
# 	$(GLIB_INCLUDES)

# # Link with static libcap.a
# LDADD = $(top_builddir)/src/platform/user/libcap.a $(GLIB_LDFLAGS)
